refactor 4단계 - 피드백 반영
- equals, hashcode 수정
- 컨벤션 준수